--- a/Faveo Helpdesk Pro/userSearchDataCell.xib
+++ b/Faveo Helpdesk Pro/userSearchDataCell.xib
@@ -26,44 +26,53 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xee-bE-HeW">
-                        <rect key="frame" x="0.0" y="0.0" width="370" height="70.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="370" height="71"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="k5I-Nc-07T">
-                                <rect key="frame" x="15" y="8.5" width="50" height="49"/>
+                                <rect key="frame" x="15" y="9" width="50" height="50"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="8RP-FH-pG9"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="CK6-5m-9Jc"/>
-                                    <constraint firstAttribute="height" constant="50" id="CbA-bS-eLa"/>
+                                    <constraint firstAttribute="height" constant="50" id="IYe-AP-PsM"/>
+                                    <constraint firstAttribute="width" constant="50" id="ehQ-jD-GNj"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="u6r-fL-DIY"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K8Q-go-Fr8">
-                                <rect key="frame" x="90" y="24.5" width="214" height="17"/>
+                                <rect key="frame" x="85" y="16" width="214" height="17"/>
                                 <fontDescription key="fontDescription" name="TimesNewRomanPSMT" family="Times New Roman" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fwr-A1-oWE">
+                                <rect key="frame" x="85" y="38" width="232" height="15"/>
+                                <fontDescription key="fontDescription" name="TimesNewRomanPSMT" family="Times New Roman" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="k5I-Nc-07T" firstAttribute="centerY" secondItem="xee-bE-HeW" secondAttribute="centerY" constant="-2.5" id="6hR-Sf-uBH"/>
-                            <constraint firstItem="K8Q-go-Fr8" firstAttribute="top" secondItem="xee-bE-HeW" secondAttribute="top" constant="24.5" id="C9b-0q-AhC"/>
-                            <constraint firstItem="k5I-Nc-07T" firstAttribute="leading" secondItem="xee-bE-HeW" secondAttribute="leading" constant="15" id="Ker-F1-I03"/>
-                            <constraint firstItem="K8Q-go-Fr8" firstAttribute="leading" secondItem="k5I-Nc-07T" secondAttribute="trailing" constant="25" id="NHe-hT-vjf"/>
-                            <constraint firstItem="K8Q-go-Fr8" firstAttribute="centerY" secondItem="k5I-Nc-07T" secondAttribute="centerY" id="Scz-E5-l7J"/>
-                            <constraint firstItem="k5I-Nc-07T" firstAttribute="top" secondItem="xee-bE-HeW" secondAttribute="topMargin" id="Xdc-zp-dLd"/>
-                            <constraint firstAttribute="trailing" secondItem="K8Q-go-Fr8" secondAttribute="trailing" constant="66" id="y1V-Qk-Gcg"/>
+                            <constraint firstItem="Fwr-A1-oWE" firstAttribute="leading" secondItem="K8Q-go-Fr8" secondAttribute="leading" id="4zd-Mv-cmR"/>
+                            <constraint firstAttribute="trailing" secondItem="Fwr-A1-oWE" secondAttribute="trailing" constant="53" id="7bi-IF-rL4"/>
+                            <constraint firstAttribute="trailing" secondItem="K8Q-go-Fr8" secondAttribute="trailing" constant="71" id="R4s-FR-mWR"/>
+                            <constraint firstItem="K8Q-go-Fr8" firstAttribute="leading" secondItem="k5I-Nc-07T" secondAttribute="trailing" constant="20" id="WCd-Zg-afG"/>
+                            <constraint firstItem="Fwr-A1-oWE" firstAttribute="top" secondItem="K8Q-go-Fr8" secondAttribute="bottom" constant="5" id="hfW-dD-WKT"/>
+                            <constraint firstAttribute="bottom" secondItem="k5I-Nc-07T" secondAttribute="bottom" constant="12" id="m5y-MD-8je"/>
+                            <constraint firstItem="k5I-Nc-07T" firstAttribute="leading" secondItem="xee-bE-HeW" secondAttribute="leading" constant="15" id="qjm-iQ-cP3"/>
+                            <constraint firstItem="k5I-Nc-07T" firstAttribute="top" secondItem="xee-bE-HeW" secondAttribute="top" constant="9" id="r4a-BH-Goz"/>
+                            <constraint firstItem="K8Q-go-Fr8" firstAttribute="top" secondItem="xee-bE-HeW" secondAttribute="top" constant="16" id="ykk-dP-g7L"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="xee-bE-HeW" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="DDf-Rb-iTd"/>
-                    <constraint firstItem="xee-bE-HeW" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="EAy-p9-Rdx"/>
-                    <constraint firstItem="xee-bE-HeW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="NSC-Vq-9e7"/>
-                    <constraint firstAttribute="trailing" secondItem="xee-bE-HeW" secondAttribute="trailing" id="vqB-8j-gfo"/>
+                    <constraint firstAttribute="trailing" secondItem="xee-bE-HeW" secondAttribute="trailing" id="AWN-j0-Mn4"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="xee-bE-HeW" secondAttribute="bottom" constant="-14" id="dye-dc-DXJ"/>
+                    <constraint firstItem="xee-bE-HeW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="elJ-RB-6EH"/>
+                    <constraint firstItem="xee-bE-HeW" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="mpj-gG-8gd"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
+                <outlet property="emalLabel" destination="Fwr-A1-oWE" id="kHr-81-pYw"/>
                 <outlet property="userNameLabel" destination="K8Q-go-Fr8" id="jig-g5-OeE"/>
                 <outlet property="userProfileImage" destination="k5I-Nc-07T" id="cfG-nT-KBz"/>
             </connections>
