--- a/Faveo Helpdesk Pro/Base.lproj/Main.storyboard
+++ b/Faveo Helpdesk Pro/Base.lproj/Main.storyboard
@@ -6500,7 +6500,7 @@
                                 </connections>
                             </tableView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="JO5-yG-Wzf">
-                                <rect key="frame" x="87" y="84" width="240" height="29"/>
+                                <rect key="frame" x="68" y="84" width="286" height="29"/>
                                 <segments>
                                     <segment title="Ticket"/>
                                     <segment title="User"/>
@@ -6517,10 +6517,10 @@
                             <constraint firstItem="eek-dO-OGM" firstAttribute="bottom" secondItem="f0L-pY-i3B" secondAttribute="top" id="5kD-AN-sjJ"/>
                             <constraint firstItem="eek-dO-OGM" firstAttribute="top" secondItem="JO5-yG-Wzf" secondAttribute="bottom" constant="33" id="9Hp-uo-am6"/>
                             <constraint firstItem="eek-dO-OGM" firstAttribute="leading" secondItem="GuN-xv-tuq" secondAttribute="leading" id="DKp-CA-72r"/>
-                            <constraint firstItem="JO5-yG-Wzf" firstAttribute="centerX" secondItem="eek-dO-OGM" secondAttribute="centerX" id="EDb-JM-Wxy"/>
-                            <constraint firstItem="JO5-yG-Wzf" firstAttribute="leading" secondItem="GuN-xv-tuq" secondAttribute="leadingMargin" constant="67" id="GRy-ZW-Dds"/>
+                            <constraint firstItem="JO5-yG-Wzf" firstAttribute="centerX" secondItem="eek-dO-OGM" secondAttribute="centerX" constant="4" id="EDb-JM-Wxy"/>
+                            <constraint firstItem="JO5-yG-Wzf" firstAttribute="leading" secondItem="GuN-xv-tuq" secondAttribute="leadingMargin" constant="48" id="GRy-ZW-Dds"/>
                             <constraint firstItem="jha-hS-BaZ" firstAttribute="bottom" secondItem="f0L-pY-i3B" secondAttribute="top" id="GT2-8B-aoL"/>
-                            <constraint firstItem="P8z-pw-3WV" firstAttribute="centerX" secondItem="JO5-yG-Wzf" secondAttribute="centerX" id="O6i-lC-TOY"/>
+                            <constraint firstItem="P8z-pw-3WV" firstAttribute="centerX" secondItem="JO5-yG-Wzf" secondAttribute="centerX" constant="-4" id="O6i-lC-TOY"/>
                             <constraint firstItem="jha-hS-BaZ" firstAttribute="top" secondItem="eek-dO-OGM" secondAttribute="top" id="O9I-4q-bo8"/>
                             <constraint firstItem="jha-hS-BaZ" firstAttribute="leading" secondItem="eek-dO-OGM" secondAttribute="leading" id="S5h-ur-k3v"/>
                             <constraint firstAttribute="trailing" secondItem="eek-dO-OGM" secondAttribute="trailing" id="YE2-KM-8nd"/>
